fix: nav modal pointer event staying + carousel overflow styles

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,30 @@
 .hide-scrollbar::-webkit-scrollbar-thumb {
   background: transparent;
 }
+
+.profile-carousel-container {
+  position: relative;
+}
+.profile-carousel-container .flickity-enabled {
+  outline: none;
+  overflow: visible !important;
+}
+.profile-carousel-container .flickity-viewport {
+  width: 100% !important;
+  height: 100% !important;
+  overflow: visible !important;
+}
+.profile-carousel-container .flickity-slider {
+  display: flex;
+  align-items: center;
+}
+.profile-carousel-container .flickity-cell {
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  max-width: 100%;
+}
+
+.projects-carousel-container .flickity-enabled {
+  outline: none;
+}
